[project]
name = "supply-chain-env"
version = "1.0.0"
description = "OpenEnv supply chain crisis management environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.8.2",
    "openai>=2.7.2",
    "python-dotenv==1.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[dependency-groups]
dev = []